--- a/index.html
+++ b/index.html
@@ -18,39 +18,40 @@
                 <div class="switch_theme"></div>
             </div>
             <div class="input_numbers">
-                <input type="text">
+                <div class="saved_calculations">12 X</div>
+                <input type="number" placeholder="0">
             </div>
-            
+
             <div class="buttons_container">
                 <div class="buttons">
                     <div class="1">
-                        <button>AC</button>
-                        <button>C</button>
-                        <button>%</button>
-                        <button>/</button>
+                        <button class="service_buttons">AC</button>
+                        <button class="service_buttons">C</button>
+                        <button class="service_buttons">%</button>
+                        <button class="tech_buttons"><span>&#247;</span></button>
                     </div>
                     <div class="2">
-                        <button>2</button>
-                        <button>2</button>
-                        <button>2</button>
-                        <button>2</button>
+                        <button>7</button>
+                        <button>8</button>
+                        <button>9</button>
+                        <button class="tech_buttons"><span>&#215;</span></button>
                     </div>
                     <div class="3">
-                        <button>2</button>
-                        <button>2</button>
-                        <button>2</button>
-                        <button>2</button>
+                        <button>4</button>
+                        <button>5</button>
+                        <button>6</button>
+                        <button class="tech_buttons"><span>&#8211;</span></button>
                     </div>
                     <div class="4">
+                        <button>1</button>
                         <button>2</button>
-                        <button>2</button>
-                        <button>2</button>
-                        <button>2</button>
+                        <button>3</button>
+                        <button class="tech_buttons"><span>+</span></button>
                     </div>
                     <div class="5">
-                        <button class="zero">2</button>
-                        <button>2</button>
-                        <button>2</button>
+                        <button class="zero">0</button>
+                        <button>.</button>
+                        <button class="equal"><span>=</span></button>
                     </div>
                 </div>
             </div>
