--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
 
         <div class="screen">
-            <section class="expression">2+2 </section>
-            <section class="result">7</section>
+            <section class="expression">0 </section>
+            <section class="result">0</section>
         </div>
 
 
@@ -29,7 +29,7 @@
                 <button class="calc-button service_btn">AC</button>
                 <button class="calc-button service_btn">C</button>
                 <button class="calc-button service_btn">%</button>
-                <button class="calc-button service_btn">&larr;</button>
+                <button class="calc-button ">&larr;</button>
             </div>
             <div class="calc-button-row">
                 <button class="calc-button bck_color">7</button>
@@ -57,6 +57,8 @@
             </div>
         </section>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
